2001-05-02  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: Fix bug with subheading
	display.

2001-05-01  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-transfer.c: fix bugs

	* src/guile/gnucash.c.in: update last stable version

2001-05-01  Conrad Canterford <conrad@mail.watersprite.com.au>

        * make-gnucash-patch.in: add --file option to allow single file
	patches to be made.

	* README.patches (new file): Moved patch instructions from README
	file into this new file, and added detailed descriptions of all
	the options for make-gnucash-patch.

        * README: see above

2001-05-01  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/stylesheet-plain.scm: fix i18n bugs

	* src/scm/report/stylesheet-fancy.scm: work on colors,
	fix i18n bugs

	* src/gnome/dialog-style-sheet.c: fix i18n bugs

	* src/gnome/window-acct-tree.c: add popup menu to account tree

	* src/gnome/mainwindow-account-tree.c
	(gnc_mainwin_account_tree_attach_popup): add user_data argument
	for popup menu

	* src/gnome/window-register.c: same as below

	* src/gnome/window-main.c: same as below

	* src/gnome/window-register.c: obey gnome preferences for
	menubar & toolbar detachability

2001-05-01  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/average-balance.scm: moved from
	average-balance-2.scm. Fix bug.

2001-04-30  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/portfolio.scm: fix bug

	* src/scm/price-quotes.scm: handle 'nav' and 'price' types

	* src/gnome/dialog-price-editor.c: update for nav price type

	* src/quotes/finance-quote-helper.in: try 'nav' and 'price' if
	'last' fails.

2001-05-01  Robert Graham Merkel  <rgmerk@mira.net>

	* src/engine/Query.{ch}: added date-granularity sorting functionality
	to queries.

	* src/engine/date.[ch] (timespecCanonicalDayTime): new function
	migrated from the scheme code.

	* src/guile/gnc.gwp: added wrappers for the above.
