@@ -10316,7 +10316,7 @@ quit without making any changes.</text>
     <widget>
       <class>GtkScrolledWindow</class>
       <name>scrolledwindow26</name>
-      <hscrollbar_policy>GTK_POLICY_AUTOMATIC</hscrollbar_policy>
+      <hscrollbar_policy>GTK_POLICY_NEVER</hscrollbar_policy>
       <vscrollbar_policy>GTK_POLICY_AUTOMATIC</vscrollbar_policy>
       <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
       <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
@@ -10499,7 +10499,7 @@ quit without making any changes.</text>
 	  <data>Edit_Column_View_Page</data>
 	  <last_modification_time>Sat, 24 Mar 2001 17:51:58 GMT</last_modification_time>
 	</signal>
-	<label>Size ...</label>
+	<label>Size...</label>
 	<relief>GTK_RELIEF_NORMAL</relief>
 	<child>
 	  <padding>0</padding>
@@ -10529,7 +10529,7 @@ quit without making any changes.</text>
     <widget>
       <class>GtkScrolledWindow</class>
       <name>scrolledwindow27</name>
-      <hscrollbar_policy>GTK_POLICY_AUTOMATIC</hscrollbar_policy>
+      <hscrollbar_policy>GTK_POLICY_NEVER</hscrollbar_policy>
       <vscrollbar_policy>GTK_POLICY_AUTOMATIC</vscrollbar_policy>
       <hupdate_policy>GTK_UPDATE_CONTINUOUS</hupdate_policy>
       <vupdate_policy>GTK_UPDATE_CONTINUOUS</vupdate_policy>
